# tinyfacts-gen

./: .gitignore  LICENSE  README.md  ask_questions.py  check_words.py  find_action_nouns.py  generate_questions.py  generate_word_forms.py  generation_agent.py  main.py  ollama_env.sh  pyproject.toml  questions_cmd.sh  simple_language.py  text_editor.py
claude_code_created/: black_holes.txt  how_dogs_became_our_friends.txt  how_fire_works.txt  romeo_and_juliet.txt  the_water_cycle.txt  what_is_a_president.txt  why_we_sleep.txt
claude_created/: bicycle.txt  how_cameras_work.txt  how_cold_boxes_work.txt  how_music_works.txt  how_planes_work.txt  how_pulling_down_works.txt  how_things_are_made.txt  how_trees_work.txt  how_weather_works.txt  human_body.txt  internet.txt  making_bread.txt  rain_and_water.txt  solar_system.txt  the_ring_story.txt  the_space_story.txt  the_wizard_story.txt
claude_sonnet_4_5_created/: bicycle.txt  how_books_work.txt  how_music_works.txt  how_planes_work.txt  how_sleep_works.txt  human_body.txt  the_space_story.txt  trains.txt
gemini-2_5-flash_created/: stranger_things_season_one.txt
gemini-2_5-pro_created/: the_story_of_the_girl_in_the_strange_land.txt  what_is_a_hospital.txt
gemini-3-flash-preview_cloud_created/: losing_things.txt  what_is_a_lock?.txt
gpt-5-mini_created/: what_is_a_washing_machine.txt
gpt-5_1_created/: explaining_the_world.txt  food_chain_explained_simply.txt  how_a_big_water_car_works.txt  life.txt  the_boy_and_the_talking_tree.txt  the_old_strong_group_of_cities_and_lands.txt  what_"crazy"_means.txt  (+24 more)
(+183 files in other folders)
